--- a/src/GameStore.Web/appsettings.json
+++ b/src/GameStore.Web/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=MYCOOLPC\\SQLEXPRESS;Initial Catalog=GameDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MYCOOLPC\\SQLEXPRESS;Initial Catalog=GameDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "BankInvoiceSettings": {
+    "ValidityDays": 3
+  }
 }
