--- a/gamestore-ui-app/assets/configuration/configuration.json
+++ b/gamestore-ui-app/assets/configuration/configuration.json
@@ -1,36 +1,36 @@
 {
-  "baseApiUrl": "",
+  "baseApiUrl": "http://localhost:5290",
 
-  "gameApiUrl": "",
-  "gameByIdApiUrl": "",
-  "gamesApiUrl": "",
-  "gamesByGenreApiUrl": "",
-  "gamesByPublisherApiUrl": "",
-  "gamesByPlatformApiUrl": "",
-  "getGameFile": "",
-  "updateGameApiUrl": "",
-  "addGameApiUrl": "",
-  "deleteGameApiUrl": "",
+  "gameApiUrl": "/api/games/{key}",
+  "gameByIdApiUrl": "/api/games/find/{id}",
+  "gamesApiUrl": "/api/games",
+  "gamesByGenreApiUrl": "/api/genres/{genreId}/games",
+  "gamesByPublisherApiUrl": "/api/publishers/Name/{companyName}/games",
+  "gamesByPlatformApiUrl": "/api/platforms/{platformId}/games",
+  "getGameFile": "/api/games/{key}/file",
+  "updateGameApiUrl": "/api/games",
+  "addGameApiUrl": "/api/games",
+  "deleteGameApiUrl": "/api/games/{key}",
 
-  "genreApiUrl": "",
-  "genresApiUrl": "",
-  "genresByGameApiUrl": "",
-  "genresByParentApiUrl": "",
-  "updateGenreApiUrl": "",
-  "addGenreApiUrl": "",
-  "deleteGenreApiUrl": "",
+  "genreApiUrl": "/api/genres/{id}",
+  "genresApiUrl": "/api/genres",
+  "genresByGameApiUrl": "/api/games/{key}/genres",
+  "genresByParentApiUrl": "/api/genres/{id}/genres",
+  "updateGenreApiUrl": "/api/genres",
+  "addGenreApiUrl": "/api/genres",
+  "deleteGenreApiUrl": "/api/genres/{id}",
 
-  "platformApiUrl": "",
-  "platformsApiUrl": "",
-  "platformsByGameApiUrl": "",
-  "updatePlatformApiUrl": "",
-  "addPlatformApiUrl": "",
-  "deletePlatformApiUrl": "",
+  "platformApiUrl": "/api/platforms/{id}",
+  "platformsApiUrl": "/api/platforms",
+  "platformsByGameApiUrl": "/api/games/{key}/platforms",
+  "updatePlatformApiUrl": "/api/platforms",
+  "addPlatformApiUrl": "/api/platforms",
+  "deletePlatformApiUrl": "/api/platforms/{id}",
 
-  "publisherApiUrl": "",
-  "publishersApiUrl": "",
-  "publisherByGameApiUrl": "",
-  "addPublisherApiUrl": "",
-  "deletePublisherApiUrl": "",
-  "updatePublisherApiUrl": ""
+  "publisherApiUrl": "/api/publishers/{id}",
+  "publishersApiUrl": "/api/publishers",
+  "publisherByGameApiUrl": "/api/games/{key}/publisher",
+  "addPublisherApiUrl": "/api/publishers",
+  "deletePublisherApiUrl": "/api/publishers/{id}",
+  "updatePublisherApiUrl": "/api/publishers"
 }
