--- a/gamestore-ui-app/assets/configuration/route-configuration.json
+++ b/gamestore-ui-app/assets/configuration/route-configuration.json
@@ -1,25 +1,25 @@
 {
-  "Game": "",
-  "UpdateGame": "",
-  "DeleteGame": "",
-  "AddGame": "",
-  "Games": "",
+  "Game": "/game/{key}",
+  "UpdateGame": "/game/{key}/edit",
+  "DeleteGame": "/game/{key}/delete",
+  "AddGame": "/games/add",
+  "Games": "/games",
 
-  "Genres": "",
-  "Genre": "",
-  "AddGenre": "",
-  "DeleteGenre": "",
-  "UpdateGenre": "",
+  "Genres": "/genres",
+  "Genre": "/genre/{id}",
+  "AddGenre": "/genres/add",
+  "DeleteGenre": "/genre/{id}/delete",
+  "UpdateGenre": "/genre/{id}/edit",
 
-  "UpdatePlatform": "",
-  "DeletePlatform": "",
-  "Platform": "",
-  "AddPlatform": "",
-  "Platforms": "",
+  "Platform": "/platform/{id}",
+  "Platforms": "/platforms",
+  "AddPlatform": "/platforms/add",
+  "DeletePlatform": "/platform/{id}/delete",
+  "UpdatePlatform": "/platform/{id}/edit",
 
-  "Publishers": "",
-  "Publisher": "",
-  "UpdatePublisher": "",
-  "DeletePublisher": "",
-  "AddPublisher": ""
+  "Publishers": "/publishers",
+  "Publisher": "/publisher/{id}",
+  "UpdatePublisher": "/publisher/{id}/edit",
+  "DeletePublisher": "/publisher/{id}/delete",
+  "AddPublisher": "/publishers/add"
 }
