--- a/src/GameStore.Application/GameStore.Application.csproj
+++ b/src/GameStore.Application/GameStore.Application.csproj
@@ -25,7 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\GameStore.Shared\GameStore.Shared.csproj" />
+		<ProjectReference Include="..\GameStore.Shared\GameStore.Shared.csproj" />
 		<ProjectReference Include="..\GameStore.Domain\GameStore.Domain.csproj" />
 		<ProjectReference Include="..\GameStore.Infrastructure\GameStore.Infrastructure.csproj" />
 	</ItemGroup>
