--- a/src/GameStore.Infrastructure/GameStore.Infrastructure.csproj
+++ b/src/GameStore.Infrastructure/GameStore.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GameStore.Shared\GameStore.Shared.csproj" />
+    <ProjectReference Include="..\GameStore.Shared\GameStore.Shared.csproj" />
     <ProjectReference Include="..\GameStore.Domain\GameStore.Domain.csproj" />
   </ItemGroup>
 
