--- a/src/GameStore.Shared/GameStore.Shared.csproj
+++ b/src/GameStore.Shared/GameStore.Shared.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GameStore.Domain\GameStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
