--- a/src/GameStore.Api/appsettings.json
+++ b/src/GameStore.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=MYCOOLPC\\SQLEXPRESS;Initial Catalog=GameDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "TotalGamesCacheOptions": {
+    "CacheExpirationMinutes": 1
   }
 }
