--- a/gamestore-ui-app/assets/configuration/configuration.json
+++ b/gamestore-ui-app/assets/configuration/configuration.json
@@ -1,36 +1,36 @@
 {
-  "baseApiUrl": "http://localhost:5290",
+  "baseApiUrl": "https://localhost:5001/api",
 
-  "gameApiUrl": "/api/games/{key}",
-  "gameByIdApiUrl": "/api/games/find/{id}",
-  "gamesApiUrl": "/api/games",
-  "gamesByGenreApiUrl": "/api/genres/{genreId}/games",
-  "gamesByPublisherApiUrl": "/api/publishers/Name/{companyName}/games",
-  "gamesByPlatformApiUrl": "/api/platforms/{platformId}/games",
-  "getGameFile": "/api/games/{key}/file",
-  "updateGameApiUrl": "/api/games",
-  "addGameApiUrl": "/api/games",
-  "deleteGameApiUrl": "/api/games/{key}",
+  "gameApiUrl": "/games/{key}",
+  "gameByIdApiUrl": "/games/find/{id}",
+  "gamesApiUrl": "/games",
+  "gamesByGenreApiUrl": "/genres/{id}/games",
+  "gamesByPublisherApiUrl": "/publishers/Name/{companyName}/games",
+  "gamesByPlatformApiUrl": "/platforms/{id}/games",
+  "getGameFile": "/games/{key}/file",
+  "updateGameApiUrl": "/games",
+  "addGameApiUrl": "/games",
+  "deleteGameApiUrl": "/games/{key}",
 
-  "genreApiUrl": "/api/genres/{id}",
-  "genresApiUrl": "/api/genres",
-  "genresByGameApiUrl": "/api/games/{key}/genres",
-  "genresByParentApiUrl": "/api/genres/{id}/genres",
-  "updateGenreApiUrl": "/api/genres",
-  "addGenreApiUrl": "/api/genres",
-  "deleteGenreApiUrl": "/api/genres/{id}",
+  "genreApiUrl": "/genres/{id}",
+  "genresApiUrl": "/genres",
+  "genresByGameApiUrl": "/games/{key}/genres",
+  "genresByParentApiUrl": "/genres/{id}/genres",
+  "updateGenreApiUrl": "/genres",
+  "addGenreApiUrl": "/genres",
+  "deleteGenreApiUrl": "/genres/{id}",
 
-  "platformApiUrl": "/api/platforms/{id}",
-  "platformsApiUrl": "/api/platforms",
-  "platformsByGameApiUrl": "/api/games/{key}/platforms",
-  "updatePlatformApiUrl": "/api/platforms",
-  "addPlatformApiUrl": "/api/platforms",
-  "deletePlatformApiUrl": "/api/platforms/{id}",
+  "platformApiUrl": "/platforms/{id}",
+  "platformsApiUrl": "/platforms",
+  "platformsByGameApiUrl": "/games/{key}/platforms",
+  "updatePlatformApiUrl": "/platforms",
+  "addPlatformApiUrl": "/platforms",
+  "deletePlatformApiUrl": "/platforms/{id}",
 
-  "publisherApiUrl": "/api/publishers/{id}",
-  "publishersApiUrl": "/api/publishers",
-  "publisherByGameApiUrl": "/api/games/{key}/publisher",
-  "addPublisherApiUrl": "/api/publishers",
-  "deletePublisherApiUrl": "/api/publishers/{id}",
-  "updatePublisherApiUrl": "/api/publishers"
+  "publisherApiUrl": "/publishers/{companyName}",
+  "publishersApiUrl": "/publishers",
+  "publisherByGameApiUrl": "/games/{key}/publisher",
+  "addPublisherApiUrl": "/publishers",
+  "deletePublisherApiUrl": "/publishers/{id}",
+  "updatePublisherApiUrl": "/publishers"
 }
