--- a/gamestore-ui-app/assets/configuration/configuration.json
+++ b/gamestore-ui-app/assets/configuration/configuration.json
@@ -1,5 +1,5 @@
 {
-  "baseApiUrl": "https://localhost:7091/",
+  "baseApiUrl": "https://localhost:5001/",
 
   "gameApiUrl": "games/{key}",
   "gameByIdApiUrl": "games/find/{id}",
@@ -43,3 +43,36 @@
   "makeOrderInfoApiUrl": "orders/payment-methods",
   "payApiUrl": "orders/payment"
 }
+ // epic 4
+ //"gameApiUrl": "games/{key}",
+ // "gameByIdApiUrl": "games/find/{id}",
+ // "gamesApiUrl": "games",
+ // "gamesByGenreApiUrl": "genres/{id}/games",
+ // "gamesByPublisherApiUrl": "publishers/Name/{companyName}/games",
+ // "gamesByPlatformApiUrl": "platforms/{id}/games",
+ // "getGameFile": "games/{key}/file",
+ // "updateGameApiUrl": "games",
+ // "addGameApiUrl": "games",
+ // "deleteGameApiUrl": "games/{key}",
+
+ // "genreApiUrl": "genres/{id}",
+ // "genresApiUrl": "genres",
+ // "genresByGameApiUrl": "games/{key}/genres",
+ // "genresByParentApiUrl": "genres/{id}/genres",
+ // "updateGenreApiUrl": "genres",
+ // "addGenreApiUrl": "genres",
+ // "deleteGenreApiUrl": "genres/{id}",
+
+ // "platformApiUrl": "platforms/{id}",
+ // "platformsApiUrl": "platforms",
+ // "platformsByGameApiUrl": "games/{key}/platforms",
+ // "updatePlatformApiUrl": "platforms",
+ // "addPlatformApiUrl": "platforms",
+ // "deletePlatformApiUrl": "platforms/{id}",
+
+ // "publisherApiUrl": "publishers/{companyName}",
+ // "publishersApiUrl": "publishers",
+ // "publisherByGameApiUrl": "games/{key}/publisher",
+ // "addPublisherApiUrl": "publishers",
+ // "deletePublisherApiUrl": "publishers/{id}",
+ // "updatePublisherApiUrl": "publishers"
