--- a/gamestore-ui-app/assets/configuration/route-configuration.json
+++ b/gamestore-ui-app/assets/configuration/route-configuration.json
@@ -1,5 +1,27 @@
 {
+  //epic 5 empty
+  //epic 4:
+  "Game": "/game",
+  "UpdateGame": "/update-game",
+  "DeleteGame": "/delete-game",
+  "AddGame": "/add-game",
+  "Games": "/games",
 
+  "Genres": "/genres",
+  "Genre": "/genre",
+  "AddGenre": "/add-genre",
+  "DeleteGenre": "/delete-genre",
+  "UpdateGenre": "/update-genre",
 
+  "UpdatePlatform": "/update-platform",
+  "DeletePlatform": "/delete-platform",
+  "Platform": "/platform",
+  "AddPlatform": "/add-platform",
+  "Platforms": "/platforms",
 
+  "Publishers": "/publishers",
+  "Publisher": "/publisher",
+  "UpdatePublisher": "/update-publisher",
+  "DeletePublisher": "/delete-publisher",
+  "AddPublisher": "/add-publisher"
 }
