--- a/src/GameStore.Api/appsettings.json
+++ b/src/GameStore.Api/appsettings.json
@@ -11,5 +11,8 @@
   },
   "TotalGamesCacheOptions": {
     "CacheExpirationMinutes": 1
+  },
+  "PaymentMicroservice": {
+    "BaseUrl": "http://localhost:5237"
   }
 }
