refactor:add validation ,edited dtos

--- a/src/GameStore.Api/appsettings.json
+++ b/src/GameStore.Api/appsettings.json
@@ -13,6 +13,6 @@
     "CacheExpirationMinutes": 3
   },
   "PaymentMicroservice": {
-    "BaseUrl": "http://localhost:5237"
+    "BaseUrl": "https://localhost:5001"
   }
 }
