feat:added extension fix:pdfService

--- a/src/GameStore.Api/appsettings.json
+++ b/src/GameStore.Api/appsettings.json
@@ -14,5 +14,8 @@
   },
   "PaymentMicroservice": {
     "BaseUrl": "https://localhost:5001"
+  },
+  "PaymentSettings": {
+    "BankInvoiceValidityDays": 30
   }
 }
